--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "test": "grunt nodeunit"
   },
   "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt": "~0.4.5",
     "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-serve": "~0.1.6"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "handlebars": "^4.0.5"
+  }
 }
