--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-serve": "~0.1.6"
   },
